# gitgrade

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  conftest.py  dockDockBuildParams.json  docker-compose.yml  docker-wait.sh  liccheck.ini  manage.py  mypy.ini  pylintrc  pyproject.toml  pytest.ini
authorization/: urls.py  views.py
aws/: gitgrade-carrot.json
gitgrade/: __init__.py  asgi.py  context_processors.py  settings.py  urls.py  util.py  version.txt  wsgi.py
gitgrade/static/css/: style.css
gitgrade/templates/gitgrade/: base.html
repo/: admin.py  forms.py  models.py  services.py  urls.py  views.py
repo/data/: from_source.py  general.py  git_data.py  github.py  grade.py
repo/migrations/: 0001_initial.py  0002_gitrepodata_days_since_commit.py  0003_gitrepodata_prolific_author_commits_recent_and_more.py  0004_gitrepodata_commit_interval_all_mean_and_more.py  0005_cachedata_delete_gitrepodata_cachedata_unique_repo.py  0006_remove_cachedata_code_file_count_and_more.py  0007_remove_cachedata_contributor_branch_count_and_more.py
repo/services/: data.py  db_cache_service.py  errors.py  grade_calculator_service.py  input_service.py  local_git_service.py  repo_input_service.py  rest_api_service.py  rest_api_service_async.py  url_service.py  util.py
repo/templates/repo/: repo_input.html  repo_results.html
repo/tests/: bitbucket_objects.py  github_data.py  test_services.py
repo/tests/services/: test_db_cache_service.py  test_grade_calculator_service.py  test_local_git_service.py  test_reference_points.py  test_rest_api_service.py  test_rest_api_service_async.py  test_url_service.py
