[tool.poetry]
name = "gitgrade"
version = "0.6.0"
description = "Evaluates quality of git repos and provides a grade"
authors = ["Douglas Adams <douglasryanadams@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
aiohttp = "^3.8.3"
certifi = "^2022.9.24"
Django = "^4.1.3"
django-bootstrap-v5 = "^1.0.11"
GitPython = "^3.1.29"
packaging = "^21.3"
psycopg2 = "^2.9.5"
python = "^3.10"
requests = "^2.28.1"
uWSGI = "^2.0.21"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
django-stubs = "^1.13.0"
freezegun = "^1.2.2,"
liccheck = "^0.8.1"
mypy = "^0.991"
pip-audit = "^2.4.5"
pytest = "^7.2.0"
pylint = "^2.15.6"
pytest-django = "^4.5.2"
pylint-django = "^2.5.3"
pytest-asyncio = "^0.20.2"
pytest-aiohttp = "^1.0.4"
pytest-mock = "^3.10.0"
safety = "^2.3.5"
types-requests = "^2.28.11.5"
types-freezegun = "^1.1.10"
yamllint = "^1.28.0"

[tool.black]
line-length = 180

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
